--- a/01 - Fundamentos/src/components/header/Header.module.css
+++ b/01 - Fundamentos/src/components/header/Header.module.css
@@ -1,4 +1,17 @@
 .header {
-  background-color: #333333;
-  height: 80px;
+  background: var(--gray-800);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.25rem 0;
+  gap: 1rem;
+}
+
+.header strong {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.header img {
+  height: 3rem;
 }
