--- a/01 - Fundamentos/src/App.module.css
+++ b/01 - Fundamentos/src/App.module.css
@@ -8,3 +8,13 @@
   gap: 2rem;
   align-items: start;
 }
+
+@media (max-width: 768px) {
+  .wrapper {
+    grid-template-columns: 1fr;
+  }
+
+  html {
+    font-size: 0.875rem;
+  }
+}
