--- a/01 - Fundamentos/src/components/Post.module.css
+++ b/01 - Fundamentos/src/components/Post.module.css
@@ -92,7 +92,8 @@
   max-height: 0;
 }
 
-.componentForm:focus-within footer {
+.componentForm:focus-within footer,
+.componentForm textarea:valid+footer {
   visibility: visible;
   max-height: none;
 }
@@ -110,8 +111,16 @@
   transition: background-color 0.1s;
 }
 
-.componentForm button[type=submit]:hover {
+.componentForm button[type=submit]:not(:disabled):hover {
   background: var(--green-300);
+}
+
+.componentForm button[type=submit]:disabled {
+  opacity: 0.7;
+}
+
+.componentForm button[type=submit]:disabled:hover {
+  cursor: not-allowed;
 }
 
 .commentList {
