--- a/Challenges/01 - To Do List/src/components/Input.module.css
+++ b/Challenges/01 - To Do List/src/components/Input.module.css
@@ -1,3 +1,17 @@
 .input {
   width: 100%;
+  height: 3.375rem;
+  background: var(--gray-500);
+  border: 1px solid var(--gray-700);
+  outline: none;
+  padding: 1rem;
+  border-radius: 8px;
+  color: var(--gray-100);
+  line-height: 1.4;
+  position: relative;
+  transform: translateY(-50%);
+}
+
+.input::placeholder {
+  color: var(--gray-300);
 }
