--- a/Challenges/01 - To Do List/src/components/Input.module.css
+++ b/Challenges/01 - To Do List/src/components/Input.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 3.375rem;
   background: var(--gray-500);
-  border: 1px solid var(--gray-700);
+  border: none;
   outline: none;
   padding: 1rem;
   border-radius: 8px;
