--- a/Challenges/01 - To Do List/src/components/Input.module.css
+++ b/Challenges/01 - To Do List/src/components/Input.module.css
@@ -1,6 +1,6 @@
 .input {
   width: 100%;
-  height: 3.375rem;
+  height: 3.25rem;
   background: var(--gray-500);
   border: none;
   outline: none;
@@ -10,6 +10,7 @@
   line-height: 1.4;
   position: relative;
   transform: translateY(-50%);
+  margin-bottom: 2.375rem;
 }
 
 .input::placeholder {
