style: :lipstick: style item module

--- a/Challenges/01 - To Do List/src/index.css
+++ b/Challenges/01 - To Do List/src/index.css
@@ -18,10 +18,10 @@
   --red-500: #E25858;
 }
 
-:focus {
+/* :focus {
   outline: transparent;
   box-shadow: 0 0 0 2px var(--purple-500);
-}
+} */
 
 * {
   margin: 0;
