--- a/Challenges/01 - To Do List/src/components/List/Item.module.css
+++ b/Challenges/01 - To Do List/src/components/List/Item.module.css
@@ -11,6 +11,41 @@
   gap: 0.75rem;
 }
 
+.container label input[type="checkbox"] {
+  display: none;
+}
+
+.taskCompletionCheckbox {
+  margin-top: 0.125rem;
+  width: 1.125rem;
+  height: 1.125rem;
+  border-radius: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: 2px solid var(--blue-300);
+}
+
+/* .container label input[type="checkbox"] {
+  appearance: none;
+  margin-top: 0.1875rem;
+  width: 1.125rem;
+  height: 1.125rem;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  border: solid 1px var(--blue-300);
+  border-radius: 100%;
+  outline: none;
+}
+
+.container label input[type="checkbox"]:checked {
+  background-color: var(--purple-500);
+  border: none;
+} */
+
 .container label {
   display: flex;
   align-items: flex-start;
@@ -22,24 +57,13 @@
   line-height: 1.4;
 }
 
-.container label p::first-line {
-  margin-top: 0;
-}
-
-.container label input[type='checkbox'] {
-  margin-top: 0.1875rem;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 100%;
-  background-color: transparent;
-}
-
 .container button {
   background: none;
   border: none;
   outline: none;
   width: 1.25rem;
   height: 1.25rem;
+  border-radius: 2px;
   margin-top: 0.1875rem;
 }
 
